--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -78,7 +78,13 @@
                                             :class => 'button'
 
 #item-preview
-  #item-preview-species= standard_species_images_for(@item)
+  #item-preview-species
+    -# Does this cache ever need to be swept? I don't think so. These days we
+    -# can identify body-specific items instantly, and, if it's instead
+    -# particular to a single species, we definitely know that the first time
+    -# we render.
+    - localized_cache "items/#{@item.id} item_preview_species" do
+      = standard_species_images_for(@item)
   #item-preview-error
   #item-preview-swf= t '.preview.requirements_not_met'
 
