--- a/app/views/items/_item_link.html.haml
+++ b/app/views/items/_item_link.html.haml
@@ -1,6 +1,5 @@
 - localized_cache "items/#{item.id}#item_link_partial" do
-  = link_to item_path(item, :q => @query) do
+  = link_to item_path(item) do
     = image_tag item.thumbnail_url, :alt => item.description, :title => item.description
     %span.name= item.name
     = nc_icon_for(item)
-
