--- a/app/views/closet_lists/_closet_list.html.haml
+++ b/app/views/closet_lists/_closet_list.html.haml
@@ -17,7 +17,7 @@
 
     .closet-list-hangers
       - unless closet_list.hangers.empty?
-        = render_sorted_hangers(closet_list, show_controls)
+        = render_sorted_hangers(closet_list)
     
     %span.empty-list= t('.empty')
 
