--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,3 +1,3 @@
 .object
-  = render :partial => 'items/item_link', :locals => {:item => item}
+  = render_item_link(item)
   = closeted_icons_for(item)
