WIP commit for speeding up item show pages

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -79,6 +79,7 @@
 
 #item-preview
   #item-preview-species
+    -# localized_cache random_standard_species_images_key do
     = standard_species_images_for(@item)
   #item-preview-error
   #item-preview-swf= t '.preview.requirements_not_met'
