--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
         = yield :title_category
       - else
         #{t 'app_name'}: #{t '.title_tagline'}
+    %link{href: image_path('favicon.png'), rel: 'icon'}
     /[if IE]
       = include_javascript_libraries :html5
     = yield :stylesheets
