--- a/app/assets/stylesheets/outfits/_new.sass
+++ b/app/assets/stylesheets/outfits/_new.sass
@@ -220,6 +220,9 @@ body.outfits-new
         p
           font-family: $main-font
           margin-bottom: .5em
+        .modeled
+          color: $soft-text-color
+          text-decoration: line-through
 
       .models
         font-size: 85%
@@ -236,16 +239,31 @@ body.outfits-new
           background: $module-bg-color
           border: 1px solid $module-border-color
           padding-right: 8px
+          text-align: left
 
           &:active
             position: relative
             top: 1px
 
+        img, div
+          display: inline-block
+          vertical-align: top
+
         img
           height: 40px
           margin-right: 8px
-          vertical-align: middle
           width: 40px
+
+        div
+          line-height: 1.25
+          padding-top: 10px
+
+        .pet-name, .message
+          display: block
+
+        .message
+          font-style: italic
+          font-size: 85%
   
   #latest-contribution
     +subtle-banner
