--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -117,4 +117,4 @@
 
 - content_for :javascripts do
   = include_javascript_libraries :jquery20, :jquery_tmpl
-  = javascript_include_tag 'react', 'jquery.timeago', 'pet_query', 'outfits/new', 'modeling'
+  = javascript_include_tag 'ajax_auth', 'react', 'jquery.timeago', 'pet_query', 'outfits/new', 'modeling'
