better alignment of add neopets username form

--- a/app/assets/stylesheets/outfits/_new.sass
+++ b/app/assets/stylesheets/outfits/_new.sass
@@ -151,7 +151,10 @@ body.outfits-new
       max-width: 55%
       text-align: right
 
-      ul, li, form
+      ul
+        display: inline
+
+      li, form
         display: inline-block
 
       li
