--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -8,7 +8,7 @@
       %span= t 'infinite_closet'
 - content_for :content do
   = form_tag items_path, :method => :get do
-    = text_field_tag :q, @query
+    = text_field_tag :q, @query.to_s
     = submit_tag t('.search'), :name => nil
   = yield
 = render :file => 'layouts/application'
