--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -103,15 +103,17 @@
         = closet_lists_group_name :you, false
       #preview-search-form-pagination
       %a#preview-search-form-clear{:href => "#"}= t '.search.form.clear'
-    %dl#preview-search-form-help
-      %div
-        %dt= t '.search.examples.basic.query'
-        %dd= t '.search.examples.basic.description'
-      %div
-        %dt= t '.search.examples.flags.query'
-        %dd= t '.search.examples.flags.description'
-      %div= search_query 'species', 'species'
-      %div= search_query 'type', 'occupies'
+    #preview-search-form-help
+      -# TODO: remove search.examples
+      -# TODO: i18n
+      -# TODO: hook up labels
+      %ul
+        %li
+          %label Item name must contain
+          %input{type: 'text', name: 'name_require'}
+        %li
+          %label Item name must not contain
+          %input{type: 'text', name: 'name_exclude'}
     #preview-search-form-loading= t '.search.loading'
     #preview-search-form-error.possible-error
     #preview-search-form-no-results
