add prank messages to outfits#show

--- a/app/assets/stylesheets/outfits/_show.sass
+++ b/app/assets/stylesheets/outfits/_show.sass
@@ -17,6 +17,9 @@ body.outfits-show
     float: right
     margin-top: 1em
 
+  #prank-color-message
+    clear: both
+
   #preview-wrapper
     clear: both
     height: 400px
