--- a/app/views/outfits/show.html.haml
+++ b/app/views/outfits/show.html.haml
@@ -16,12 +16,7 @@
   #outfit-user
     = outfit_creation_summary(@outfit)
 
-- if @outfit.color.prank?
-  %p.warning#prank-color-message
-    - if Color.pranks_funny?
-      = t 'colors.prank_message.funny_html', color: @outfit.color.unfunny_human_name
-    - else
-      = t 'colors.prank_message.unfunny_html', color: @outfit.color.unfunny_human_name
+= prank_color_message(@outfit.color)
 
 #preview-wrapper
   #preview-swf
