--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -48,6 +48,7 @@
         #save-success= t '.sidebar.notifications.outfits.save.success'
         #save-error
         #preview-closet.sidebar-view
+          = prank_color_message('%{color}')
           %ul
         #preview-outfits.sidebar-view
           %ul#preview-outfits-list
