include prank message on wardrobe page

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -826,3 +826,6 @@ body.outfits-edit
     #current-outfit-permalink
       display: none !important
 
+  #prank-color-message
+    display: none
+    margin: 0 1em
