footer, stop getting in search's way!

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -316,6 +316,7 @@ body.outfits-edit
     #footer
       bottom: 0
       left: 0
+      padding-top: 0
       position: absolute
       width: 100%
       ul, li, p, div
